优化防火墙配置

--- a/modules/rsync/templates/rsyncd.erb
+++ b/modules/rsync/templates/rsyncd.erb
@@ -4,7 +4,7 @@ read only = yes
 list = no
 uid = root
 gid = wheel
-hosts allow = 113.107.160.72 121.10.139.59 113.107.180.116 112.90.25.116 192.168.11.0/24
+hosts allow = 113.107.160.72 121.10.139.59 113.107.180.116 112.90.25.116
 max connections = 20
 log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
