--- a/modules/rsync/templates/rsyncd.erb
+++ b/modules/rsync/templates/rsyncd.erb
@@ -4,6 +4,7 @@ read only = yes
 list = no
 uid = root
 gid = wheel
+reverse lookup = no
 hosts allow = 113.107.160.72 121.10.139.59 113.107.180.116 112.90.25.116
 max connections = 20
 log file = /var/log/rsyncd.log
@@ -17,5 +18,4 @@ include=*.tar.bz2
 include=*.tar.gz
 include=*.log
 auth users = rsy_user
-
 ################################################
