--- a/modules/centos_env/templates/bashrc.erb
+++ b/modules/centos_env/templates/bashrc.erb
@@ -5,6 +5,6 @@ if [ -f /etc/bashrc ]; then
 . /etc/bashrc
 fi
 export LANG=en_US.UTF-8
-export PS1='[\u@<%= @ps1 %> \W]\$ '
+export PS1='[\u@<%= @bashrc_ps1 %> \W]\$ '
 export PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin:/usr/local/bin
 
