--- a/modules/script/templates/game_start.erb
+++ b/modules/script/templates/game_start.erb
@@ -11,7 +11,7 @@ export HOME=/root
 ###############
 #通用多进程操作
 #调用方法：
-#run_process <p_num> <list_file> <your_function> [your_function_parameter]
+#run_process p_num list_file your_function [your_function_parameter]
   ################
   function run_process(){
 
