--- a/modules/tcollector/templates/tsdb_collector.erb
+++ b/modules/tcollector/templates/tsdb_collector.erb
@@ -1,5 +1,8 @@
 #!/bin/sh
-
+###
+# chkconfig: 235 98 55
+# description: Manages the services you are controlling with the chkconfig command
+###
 # Semi Universal start-stop script
 # Keep it sh compatible, test with bash, dash, ksh, and zsh.
 
