--- a/modules/mysql/templates/my.cnf.erb
+++ b/modules/mysql/templates/my.cnf.erb
@@ -56,7 +56,7 @@ innodb_flush_method = O_DIRECT
 innodb_log_buffer_size = 16M
 innodb_log_file_size = 512M
 innodb_log_files_in_group = 2
-innodb_buffer_pool_size = 125M
+innodb_buffer_pool_size = <%= @innodb_buffer_pool_size %>M
 innodb_buffer_pool_restore_at_startup = 600
 innodb_blocking_buffer_pool_restore = 1
 innodb_flush_log_at_trx_commit = 2
