--- a/modules/nginx/templates/nginx.erb
+++ b/modules/nginx/templates/nginx.erb
@@ -30,9 +30,11 @@ http {
     fastcgi_send_timeout         600;
     fastcgi_temp_file_write_size 128k;
     fastcgi_temp_path            /dev/shm;
-    log_format  access  '$request_time - $remote_addr - $remote_user [$time_local] "$request" ' '$status $body_bytes_sent "$http_referer" ' '"$http_user_agent" $http_x_forwarded_for';
+log_format  access  '$request_time - $remote_user $remote_addr [$time_iso8601] "$request" '
+'$status $body_bytes_sent "$http_referer" '
+'"$http_user_agent" $host $server_addr';
 
-    server
+server
     {
         listen 80;
         server_name empty;
