--- a/modules/nagios/templates/nrpe.erb
+++ b/modules/nagios/templates/nrpe.erb
@@ -43,8 +43,8 @@ connection_timeout=300
 # COMMAND DEFINITIONS
 command[check_disk]=/usr/local/nagios/libexec/check_disk -x /boot -x /dev/shm -w 20% -c 10%
 command[check_load]=/usr/local/nagios/libexec/check_load -w 25,20,15 -c 30,25,20
-command[check_mysql]=/usr/local/nagios/libexec/check_mysql_health --socket=/var/lib/mysql/mysql.sock --mode=threads-connected --username=root --password=`/data/save/mysql_root` --port 3306 --warning=400 --critical 500
-command[check_http]=/usr/local/nagios/libexec/check_http -H  -u  /crossdomain.xml -w 5 -c 10
+command[check_mysql]=/usr/local/nagios/libexec/check_mysql_health --socket=/var/lib/mysql/mysql.sock --mode=threads-connected --username=root --password=`cat /data/save/mysql_root` --port 3306 --warning=400 --critical 500
+command[check_http]=/usr/local/nagios/libexec/check_http -H www.mingchao.com -u  /crossdomain.xml -w 5 -c 10
 command[check_ntp]=/usr/local/nagios/libexec/check_ntp_time -H 127.0.0.1 -w 3 -c 5
 command[check_iptables]=/usr/local/nagios/libexec/check_iptables
 command[check_ssh_log]=/usr/local/nagios/libexec/check_ssh_log
